--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </button>
     </div>
 
-    <audio id="fireworks-sound" src="/images/fireworks-29629.mp3" loop ></audio>
+    <audio id="fireworks-sound" src="/images/fireworks-29629.mp3" ></audio>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
