--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="confetti-container"></div>
-    <h1 class="carousel-h1">Happy BIG 30 BABY</h1>
+    <h1 class="carousel-h1"></h1>
     <div class="carousel">
       <div class="carousel-inner">
         <img src="/images/image1.jpg" alt="Image 1" />
@@ -53,6 +53,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <h1>Why I Love you and wont trade you for anything in the World</h1>
+            <p>swipe right >>>></p>
           </div>
           <div class="swiper-slide">
             <p>
@@ -107,7 +108,7 @@
       </button>
     </div>
 
-    <audio id="fireworks-sound" src="/images/fireworks-29629.mp3" ></audio>
+    <audio id="fireworks-sound" src="/images/fireworks-29629.mp3"></audio>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
