audio file changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       </button>
     </div>
 
-    <audio id="fireworks-sound" src="/images/fireworks-29629.mp3"></audio>
+    <audio id="fireworks-sound" src="/images/Women_Of_Faith_-_Boundless_Love_CeeNaija.com_.mp3" autoplay></audio>
+
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
